kube/dev/sonarqube-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarqube
  labels:
    name: sonarqube
spec:
  type: NodePort
  ports:
   - name: http
     port: 80
     targetPort: 80
   - name: https
     port: 443
     targetPort: 443
  selector:
    name: sonarqube
