kube/dev/sonarqube-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
    ingress.kubernetes.io/secure-backends: "true"
    kubernetes.io/ingress.allow-http: "false"
  name: sonarqube
  namespace: sonarqube-dev
spec:
  rules:
  - host: sonarqube-dev.digital.homeoffice.gov.uk
    http:
      paths:
      - backend:
          serviceName: sonarqube
          servicePort: 443
        path: /
  tls:
  - hosts:
    - sonarqube-dev.digital.homeoffice.gov.uk
    secretName: letsencrypt-tls-sonarqube
